# solainovanet_ai_nodes

./: README.md
ai_node/: Cargo.toml  Readme.md  main.rs
ai_node/mymodule/: mod.rs
ai_node/src/: ai_node.rs  data_collection.rs  main.rs  model_training.rs  performance_monitor.rs
